--- a/public/index.html
+++ b/public/index.html
@@ -101,8 +101,9 @@
 
                 // Validate First Name
                 const firstName = $('#firstName').val().trim();
-                if (!firstName || firstName.length < 2 || firstName.length > 30) {
-                    alert('First Name must be between 2 and 30 characters.');
+                const namePattern = /^[a-zA-Z\s]+$/; // Allow only alphabets and spaces
+                if (!firstName || firstName.length < 2 || firstName.length > 30 || !namePattern.test(firstName)) {
+                    alert('First Name must be between 2 and 30 alphabetic characters.');
                     valid = false;
                 } else {
                     formData.firstName = firstName;
@@ -110,8 +111,8 @@
 
                 // Validate Last Name
                 const lastName = $('#lastName').val().trim();
-                if (!lastName || lastName.length < 2 || lastName.length > 30) {
-                    alert('Last Name must be between 2 and 30 characters.');
+                if (!lastName || lastName.length < 2 || lastName.length > 30 || !namePattern.test(lastName)) {
+                    alert('Last Name must be between 2 and 30 alphabetic characters.');
                     valid = false;
                 } else {
                     formData.lastName = lastName;
@@ -145,8 +146,9 @@
                     street.length < 2 || street.length > 50 ||
                     city.length < 2 || city.length > 50 ||
                     state.length < 2 || state.length > 50 ||
-                    country.length < 2 || country.length > 50) {
-                    alert('Address fields must be between 2 and 50 characters.');
+                    country.length < 2 || country.length > 50 ||
+                    !namePattern.test(street) || !namePattern.test(city) || !namePattern.test(state) || !namePattern.test(country)) {
+                    alert('Address fields must be between 2 and 50 alphabetic characters.');
                     valid = false;
                 } else {
                     formData.address = { street, city, state, country };
@@ -194,4 +196,5 @@
 
 </body>
 </html>
+
 
