--- a/public/index.html
+++ b/public/index.html
@@ -119,7 +119,7 @@
                 }
 
                 // Validate Mobile No
-                const mobileNo = $('#mobileNo').val();
+                const mobileNo = $('#mobileNo').val().trim();
                 const mobileNoPattern = /^\d{10}$/;
                 if (!mobileNoPattern.test(mobileNo)) {
                     alert('Mobile No must be exactly 10 digits.');
@@ -129,9 +129,10 @@
                 }
 
                 // Validate Email ID
-                const emailId = $('#emailId').val();
-                if (!emailId) {
-                    alert('Email ID is required.');
+                const emailId = $('#emailId').val().trim();
+                const emailPattern = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+                if (!emailId || !emailPattern.test(emailId)) {
+                    alert('Please enter a valid Email ID.');
                     valid = false;
                 } else {
                     formData.emailId = emailId;
@@ -155,7 +156,7 @@
                 }
 
                 // Validate Login ID
-                const loginId = $('#loginId').val();
+                const loginId = $('#loginId').val().trim();
                 const loginIdPattern = /^[a-zA-Z0-9]{8}$/;
                 if (!loginIdPattern.test(loginId)) {
                     alert('Login ID must be 8 alphanumeric characters.');
@@ -165,7 +166,7 @@
                 }
 
                 // Validate Password
-                const password = $('#password').val();
+                const password = $('#password').val().trim();
                 const passwordPattern = /^(?=.*[a-z])(?=.*[A-Z])(?=.*\W)[a-zA-Z\d\W]{6,}$/;
                 if (!passwordPattern.test(password)) {
                     alert('Password must be at least 6 characters long, with 1 uppercase letter, 1 lowercase letter, and 1 special character.');
@@ -196,5 +197,6 @@
 
 </body>
 </html>
+
 
 
